# tic-toc-toe

./: CMakeLists.txt  README.md  main.cpp
src/core/: Bot.cpp  Bot.hpp  Game.cpp  Game.hpp  GameSession.hpp  Renderer.cpp  Renderer.hpp
src/ui/: GameWindow.cpp  GameWindow.hpp  SizeSelectionWindow.cpp  SizeSelectionWindow.hpp  SymbolSelectionWindow.cpp  SymbolSelectionWindow.hpp
tests/core/: test_bot.cpp  test_game.cpp
